--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,7 @@ jobs:
     - uses: actions/checkout@v1 
     - name: Setup Node.js for use with actions
       uses: actions/setup-node@v1.1.0
+    - name: Run npm install
+      run: npm install --dev
     - name: Run npm test
       run: npm test
