--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   "scripts": {
     "lint": "standardx **/*.ts",
     "unit-test": "mocha -r ts-node/register 'test/**/*-spec.ts'",
-    "test": "npm run lint && npm run unit-test",
-    "format": "standardx --fix **/*.ts"
+    "test": "npm run lint && npm run compile && npm run unit-test",
+    "format": "standardx --fix **/*.ts",
+    "compile": "tsc -p .",
+    "prepublish": "npm run compile"
   },
-  "bin": "ts-node lib/cli.ts",
+  "bin": "./dist/lib/cli.js",
   "keywords": [
     "ifc"
   ],
   "author": "David Padbury <david@davidpadbury.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.7",
+    "@types/diff": "^4.0.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.4",
+    "@types/yargs": "^13.0.4",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "chai": "^4.2.0",
